              member function is only instantiated with appropriate types.
        Constants is_cpp_integer_v<T>, is_unsigned_cpp_integer_v<T>:
            - New alternatives to using std::is_integeral_v<T> and
              std::is_unsigned_v<T> that allow for 128-bit integers also.
        Global array quadString:
            - These are now C++-style strings (std::string), not C-style
              strings (array of char).
    PYTHON:
        - Updated the included pybind11 library from 2.10.0 to 2.13.6.
          This drops support for Python 3.6.
        - Improved the speed of iteration (specifically, throwing/catching
          StopIteration exceptions).
        - Rich flag types based on regina::Flags<...> (such as NormalAlg,
          CensusPurge, etc.) now support a bool() operator that tests for
          a non-empty flag set.
        - The underlying enum types for rich flags (e.g., NormalAlgFlags,
          CensusPurgeFlags, etc.) likewise now have a bool() operator that
          tests for a zero flag.  This is because zero flags play a special
          role here (they have no effect when ORed or XORed into a flag set).
        - All other enum types (i.e., those that are _not_ intended to be
          combined bitwise into flag sets) do not have a bool() operator,
          since their underying integer values are irrelevant.  All of their
          enum values will be treated as True by python.
    USER INTERFACE:
        - Now uses multithreading for those long computations that support it.
        - No longer reads the syntax highlighting theme from file; instead
          the theme is hard-coded into the executable.  This removes the
          build dependency on the Jansson JSON library.
        - The summary tabs for normal surfaces and hypersurfaces now split out
          separate counts for non-embedded (immersed and/or singular)
          surfaces and hypersurfaces.
    UTILITIES:
        regina-engine-config: