@@ -518,7 +518,9 @@ Version 7.4  [ (to be announced) ]
               std::is_unsigned_v<T> that allow for 128-bit integers also.
         Global array quadString:
             - These are now C++-style strings (std::string), not C-style
-              strings (array of char).
+              strings (array of char).  For newer compilers, they are still
+              inline constexpr, but for older compilers that do not support
+              constexpr strings they are instead declared as inline const.
     PYTHON:
         - Updated the included pybind11 library from 2.10.0 to 2.13.6.
           This drops support for Python 3.6.
